data/collection/fixes/descriptions/scala/scala-9090
Described here
http://stackoverflow.com/questions/27669605/why-cant-the-compiler-infer-type-parameter-for-package-object-while-it-works-f
```scala
// Foo.scala
trait Echo [T] {
  def echo(t: T): Unit
}

trait IntEcho extends Echo[Int] {
  def echo(t: Int) = println(t)
}

object echo extends IntEcho
package object echo1  extends IntEcho

object App extends App {
  echo.echo(1)
  echo1.echo(1)
}
```

And while I try to compile it( the attachment), it would fail
```
/tmp $ scalac Foo.scala
Foo.scala:14: error: type mismatch;
 found   : Int(1)
 required: T
  echo1.echo(1)
             ^
one error found

```